# server/src/types/index.ts
@@ -15,6 +15,9 @@ export type ActivityType = components['schemas']['ActivityType'];
 export type DetailedActivity = components['schemas']['DetailedActivity'];
 export type Lap = components['schemas']['Lap'];
 export type Split = components['schemas']['Split'];
+export type BestEffort = components['schemas']['BestEffort'];
+export type SegmentEffort = components['schemas']['SegmentEffort'];
+export type PhotosSummary = components['schemas']['PhotosSummary'];
 export type User = components['schemas']['User'];
 export type GetActivitiesResponse = components['schemas']['GetActivitiesResponse'];
 export type GetActivityResponse = components['schemas']['GetActivityResponse'];
